--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,11 @@
 @import url('./1-gallery.css');
 @import url('./2-form.css');
 
+a:hover,
+a:focus{
+  color: red;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
